[GTK] [2.33.1] Fails to build when HAVE_OPENGL_ES_3 is on https://bugs.webkit.org/show_bug.cgi?id=225867

Reviewed by Adrian Perez de Castro.

Include GLES3/gl3.h if HAVE_OPENGL_ES_3 is set.

* platform/graphics/opengl/ExtensionsGLOpenGLES.h:


Canonical link: https://commits.webkit.org/237826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277609 268f45cc-cd09-0410-ab3c-d52691b4dbfc